tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_api_key.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                                 Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ API Credential ▼ ]                                             │"
"│                                                                              │"
"│  Name       [Stripe API Key                                    ] ← Required  │"
"│                                                                              │"
"│  URL        [                                                  ] ← Optional  │"
"│                                                                              │"
"│  App ID     [stripe_live_51                                    ] ← Required  │"
"│                                                                              │"
"│  Secret Key [•••••••••••••••••                          ] [ Show ] [ Copy ]  │"
"│                                                                              │"
"│  Expiry     [ Never ▼ ]                                                      │"
"│                                                                              │"
"│  Tags       [                    ]  Enter Add  ←/→ Select  Del Delete        │"
"│                                                                              │"
"│  Notes       ← Optional                                                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
