tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_embedded_generator.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                                 Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type [ Login ▼ ]                                                            │"
"│                                                                              │"
"│  Name       [                                                  ] ← Required  │"
"│                                                                              │"
"│  URL        [                                                  ] ← Optional  │"
"│                                                                              │"
"│  Username   [                                                  ] ← Required  │"
"│                                                                              │"
"│  Password   [                             ] [ Generate ] [ Show ] [ Copy ]   │"
"│                                                                              │"
"│  Strength: (strength shown after password entry)                             │"
"│                                                                              │"
"│  Length [ 16 ]  [-] █░░░░░░░░░░░ [+]                                         │"
"│                                                                              │"
"│  [✓] Uppercase  [✓] Lowercase  [✓] Digits  [✓] Symbols                       │"
"│                                                                              │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  CorrectHorse42!                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
