tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_login_empty.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                                 Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ Login ▼ ]                                                      │"
"│                                                                              │"
"│  Name       [                                                  ] ← Required  │"
"│                                                                              │"
"│  URL        [                                                  ] ← Optional  │"
"│                                                                              │"
"│  Username   [                                                  ] ← Required  │"
"│                                                                              │"
"│  Password   [                             ] [ Generate ] [ Show ] [ Copy ]   │"
"│                                                                              │"
"│  Strength:  (strength shown after password entry)                            │"
"│                                                                              │"
"│  Expiry     [ Never ▼ ]                                                      │"
"│                                                                              │"
"│  Tags       [                    ]  Enter Add  ←/→ Select  Del Delete        │"
"│                                                                              │"
"│  Notes       ← Optional                                                      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
