tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_login_populated.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                                 Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ Login ▼ ]                                                      │"
"│                                                                              │"
"│  Name       [My Personal Webmail                               ] ← Required  │"
"│                                                                              │"
"│  URL        [https://mail.example.com                          ] ← Optional  │"
"│                                                                              │"
"│  Username   [alice_smith                                       ] ← Required  │"
"│                                                                              │"
"│  Password   [•••••••••••••••••••          ] [ Generate ] [ Show ] [ Copy ]   │"
"│                                                                              │"
"│  Strength:  (strength shown after password entry)                            │"
"│                                                                              │"
"│  Expiry     [ Never ▼ ]                                                      │"
"│                                                                              │"
"│  Tags       [                    ]                                           │"
"│             [ work ×] [ personal ×]                                          │"
"│                                                                              │"
"│  Notes      [Do not share this login info with anyone.         ] ← Optional  │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
