tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_ssh_key.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                                 Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ SSH Key ▼ ]                                                    │"
"│                                                                              │"
"│  Name       [GitHub Deployment Key                             ] ← Required  │"
"│                                                                              │"
"│  Hostname   [                                                  ] ← Optional  │"
"│                                                                              │"
"│  Public Key [ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC...] [ Paste ] [ Copy ]  │"
"│                                                                              │"
"│  Private Key[••••••••••••••••••••••••••••••••] [ Show ] [ Paste ] [ Copy ]   │"
"│        Optional                                                              │"
"│                                                                              │"
"│  Passphrase [•••••••••••••                   ] [ Show ] [ Paste ] [ Copy ]   │"
"│        Optional                                                              │"
"│                                                                              │"
"│  Expiry     [ Never ▼ ]                                                      │"
"│                                                                              │"
"│  Tags       [                    ]  Enter Add  ←/→ Select  Del Delete        │"
"│                                                                              │"
"│  Notes       ← Optional                                                      │"
"└───────────── ────────────────────────────────────────────────────────────────┘"
