tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_unsaved_dialog.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                                 Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ Login ▼ ]                                                      │"
"│                                                                              │"
"│  Name       ┌──────────────────────────────────────────────────┐ ← Required  │"
"│             │  Unsaved Changes                                 │             │"
"│  URL        │──────────────────────────────────────────────────│ ← Optional  │"
"│             │                                                  │             │"
"│  Username   │  You have unsaved changes. Discard them?         │ ← Required  │"
"│             │                                                  │             │"
"│  Password   │  Esc Cancel and stay    Enter Discard and exit   │] [ Copy ]   │"
"│             │                                                  │             │"
"│  Strength:  │──────────────────────────────────────────────────│             │"
"│             │                                                  │             │"
"│  Expiry     │         Continue Editing        Discard          │             │"
"│             └──────────────────────────────────────────────────┘             │"
"│  Tags       [                    ]  Enter Add  ←/→ Select  Del Delete        │"
"│                                                                              │"
"│  Notes       ← Optional                                                      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
