tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__create_record_test__create_record_weak_password_dialog.snap
---
source: tests/snapshot_tests/screens/create_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Create Password                                         Esc Cancel          │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type [ Login ▼ ]                                                            │"
"│                                                                              │"
"│  Name [                                                                      │"
"│ ] ← Required  ┌──────────────────────────────────────────────┐               │"
"│               │  ⚠ Weak Password                             │               │"
"│  URL [        │──────────────────────────────────────────────│               │"
"│ ] ← Optional  │                                              │               │"
"│               │  Current password strength is "Weak" and vuln│               │"
"│  Username [   │                                              │               │"
"│ ] ← Required  │  Consider using the generator to create a str│               │"
"│               │                                              │               │"
"│  Password [   │──────────────────────────────────────────────│ow ] [ Copy ]  │"
"│  Strength: (st└──────────────────────────────────────────────┘               │"
"│                                                                              │"
"│  Expiry [ Never ▼ ]                                                          │"
"│                                                                              │"
"│  Tags [                    ]                                                 │"
"│                                                                              │"
"│  Notes [                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
